2002-04-21  Mo DeJong  <supermo@bayarea.net>

	* acinclude.m4 (AC_C_BIGENDIAN_CROSS): Add new
	AC_C_BIGENDIAN_CROSS macro from the autoconf
	macro archive to support cross compiling.
	* aclocal.m4: Regen.
	* configure: Regen.
	* configure.in: Update to use AC_PROG_INSTALL
	instead of AM_PROG_INSTALL. Use AC_C_BIGENDIAN_CROSS
	instead of AC_C_BIGENDIAN to support cross
	compiling.

2002-04-20  Mo DeJong  <supermo@bayarea.net>

	* btree/bt_open.c:
	* mpool/mpool.c:
	* recno/rec_open.c: Cast the second argument
	of fstat to struct stat * to avoid a compiler
	warning.

2000-09-26  Ben Elliston  <bje@redhat.com>

	* hash/hash.h: Undefine Automake's VERSION macro.
	* PORT/include/compat.h: Undefine BYTE_ORDER.

1999-01-22  Syd Polk  <spolk@cygnus.com>

	* hash/hash.c: Don't use really large blocks even if stat
	returns them.

1998-11-12  Syd Polk  <spolk@cygnus.com>

	* configure: Regenerated with most current autoconf so that the
	exe extension is not set to .pdb when compiling with MSVC.
	
1998-11-13  Ben Elliston  <bje@cygnus.com>

	* include/db.h: Fix typo that left a comment unterminated.

1998-11-12  Ben Elliston  <bje@cygnus.com>

	* acconfig.h: Add defines for each type tested for by the macro
	CY_AC_BERKELEY_DB.

	* acinclude.m4: Test for more than just int8_t. Test for each type
	in turn, and substitute HAVE_* style defines for each type.
	
	* aclocal.m4: Regenerate.

	* config.h.in: Likewise.

	* configure: Likewise.

	* include/db.h: Wraf #ifndef's around typedefs for each of the
	types we use. Only typedef them if they are not already available
	on the target.
	
Sat Oct 24 12:23:57 1998  Andrew Cagney  <cagney@b1.cygnus.com>

	* PORT/Makefile.am (TMPDIR): Do not set to "" - confuses berkley
 	AR.
	* PORT/Makefile.in, Makefile.in: Regenerate.
	
1998-10-05  Syd Polk  <spolk@cygnus.com>
	
	* configure: Regenerated with new autoconf

1998-09-30  Ben Elliston  <bje@cygnus.com>

	* PORT/Win32/NTunixstubs.h: Remove #pragma message directives to